--- a/desafios/d012/css/style.css
+++ b/desafios/d012/css/style.css
@@ -1,1 +1,66 @@
 @charset 'UTF-8';
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  min-height: 100vh;
+  background-color: darkgray;
+}
+
+header {
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+header > h1 {
+  padding-top: 50px;
+  font-variant: small-caps;
+}
+
+header > p {
+  padding-bottom: 50px;
+}
+
+header a, footer a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+header a:hover, footer a:hover {
+  text-decoration: underline;
+}
+
+section {
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  line-height: 2em;
+  padding-left: 30px;
+
+}
+
+section.normal {
+  background-color: white;
+  color: black;
+}
+
+section.imagem {
+  background-color: #252525;
+  color: white;
+}
+
+section.imagem > p {
+  background-color: rgba(0, 0, 0, 0.432);
+  width: 450px;
+}
+
+footer {
+  background-color: black;
+  text-align: center;
+  color: white;
+  padding: 20px;
+}
