--- a/desafios/d012/css/style.css
+++ b/desafios/d012/css/style.css
@@ -1,11 +1,22 @@
 @charset 'UTF-8';
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+  --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+  --fonte2: 'Passion One', cursive;
+  --fonte3: 'Sriracha', cursive;
+}
+
 * {
   margin: 0;
   padding: 0;
+  font-size: 1em;
 }
 
 html, body {
+  font-family: var(--fonte1);
   min-height: 100vh;
   background-color: darkgray;
 }
@@ -17,6 +28,8 @@ header {
 }
 
 header > h1 {
+  font-family: var(--fonte2);
+  font-size: 6vw;
   padding-top: 50px;
   font-variant: small-caps;
 }
@@ -36,6 +49,8 @@ header a:hover, footer a:hover {
 }
 
 section {
+  font-family: var(--fonte3);
+  font-size: 3.5vw;
   padding-top: 10vh;
   padding-bottom: 10vh;
   line-height: 2em;
@@ -55,7 +70,8 @@ section.imagem {
 
 section.imagem > p {
   background-color: rgba(0, 0, 0, 0.432);
-  width: 450px;
+  display: inline-block;
+  padding: 5px;
 }
 
 footer {
