--- a/desafios/d012/css/style.css
+++ b/desafios/d012/css/style.css
@@ -58,6 +58,10 @@ section {
 
 }
 
+section > p {
+  padding-bottom: 2em;
+}
+
 section.normal {
   background-color: white;
   color: black;
@@ -66,13 +70,29 @@ section.normal {
 section.imagem {
   background-color: #252525;
   color: white;
+  box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.350);
+  background-size: cover;
+  background-position: right center;
+  background-attachment: fixed;
 }
 
 section.imagem > p {
-  background-color: rgba(0, 0, 0, 0.432);
+  background-color: rgba(0, 0, 0, 0.200);
   display: inline-block;
-  padding: 5px;
+  padding: 5px 50px;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.360);
+  border-radius: 10px;
 }
+
+section#img001 {
+  background-image: url('../imagens/background001.jpg');
+}
+
+section#img002 {
+  background-image: url('../imagens/background002.jpg');
+}
+
+
 
 footer {
   background-color: black;
