--- a/exercicios/ex026/mq003/style/style.css
+++ b/exercicios/ex026/mq003/style/style.css
@@ -1,25 +1,27 @@
 @charset "UTF-8";
 
 /* declaração geral */
-* {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
+@media all {
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, Helvetica, sans-serif;
+    }
 
-html, body {
-    width: 100vw;
-    height: 100vh;
-    background-color: #133eff;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
+    html, body {
+        width: 100vw;
+        height: 100vh;
+        background-color: #133eff;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
 
-h1 {
-    text-align: center;
-    color: white;
-    text-shadow: 2px 2px 0px #1526a7;
-    padding: 10px;
+    h1 {
+        text-align: center;
+        color: white;
+        text-shadow: 2px 2px 0px #1526a7;
+        padding: 10px;
+    }
 }
 
 /* declaração portrait */
