--- a/exercicios/ex026/mq004/css/media-query.css
+++ b/exercicios/ex026/mq004/css/media-query.css
@@ -2,6 +2,150 @@
 
 /* Todas as demais mídias */
 
+/* Typical Device Breakpoints
+* Pequenas Telas: max 600px
+* Celular: 600px - 768px
+* Tablet: 768px - 992px
+* Desktop: 992px - 1200px
+* Grandes Telas: min 1200px
+*/
+
+/* IMPRESSÃO */
 @media print {
-    
+    * {
+        font-family: "Courier New", Courier, monospace;
+    }
+
+    body {
+        background-image: url("../../imagens/back-print.jpg"); /* DESNECESSÁRIO */
+    }
+
+    main {
+        width: 90vw;
+        border: 2px solid black;
+        text-align: center;
+    }
+
+    main::after {
+        content: "Essa página de impressão foi feita por Giovani Brasil ©";
+        text-decoration: overline;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone {
+        display: none;
+    }
+
+    img#tablet {
+        display: none;
+    }
+
+    img#print {
+        display: block;
+    }
+
+    img#pc {
+        display: none;
+    }
+
+    img#tv {
+        display: none;
+    }
+}
+
+/* TABLETS */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    body {
+        background-image: url("../../imagens/back-tablet.jpg");
+    }
+
+    main {
+        width: 600px;
+    }
+
+    img#phone {
+        display: none;
+    }
+
+    img#tablet {
+        display: block;
+    }
+
+    img#print {
+        display: none;
+    }
+
+    img#pc {
+        display: none;
+    }
+
+    img#tv {
+        display: none;
+    }
+}
+
+/* DESKTOP */
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    body {
+        background-image: url("../../imagens/back-pc.jpg");
+    }
+
+    main {
+        width: 700px;
+    }
+
+    img#phone {
+        display: none;
+    }
+
+    img#tablet {
+        display: none;
+    }
+
+    img#print {
+        display: none;
+    }
+
+    img#pc {
+        display: block;
+    }
+
+    img#tv {
+        display: none;
+    }
+}
+
+/* GRANDES TELAS */
+@media screen and (min-width: 1200px) {
+    body {
+        background-image: url("../../imagens/back-tv.jpg");
+    }
+
+    main {
+        width: 800px;
+    }
+
+    img#phone {
+        display: none;
+    }
+
+    img#tablet {
+        display: none;
+    }
+
+    img#print {
+        display: none;
+    }
+
+    img#pc {
+        display: none;
+    }
+
+    img#tv {
+        display: block;
+    }
 }
