--- a/exercicios/ex026/mq005/css/media-query.css
+++ b/exercicios/ex026/mq005/css/media-query.css
@@ -1,2 +1,21 @@
 @charset "UTF-8";
 
+@media screen and (min-width: 768px) {
+    span#burguer {
+        display: none;
+    }
+
+    nav {
+        display: block;
+        text-align: center;
+    }
+
+    nav > ul > li {
+        display: inline-block;
+
+    }
+
+    main {
+        width: 768px;
+    }
+}
